<resources>
    <string name="app_name">Playlist</string>
    <string name="logout">Logout</string>
    <string name="dot">.</string>
    <string name="add_language">Add Language</string>
    <string name="enter_language">Enter Language</string>
    <string name="enter_genre">Enter Genre</string>
    <string name="add">Add</string>
    <string name="add_genre">Add Genre</string>
    <string name="load_more">Load More</string>
    <string name="songs">Songs</string>
    <string name="add_song">Add Song</string>
    <string name="enter_song_name">Enter Song Name</string>
    <string name="select_language">Select Language</string>
    <string name="select_genre">Select Genre</string>
    <string name="select_artist">Select Artist</string>
    <string name="select_image">Select Image</string>
    <string name="selected_image">Selected Image</string>
    <string name="select_song">Select Song</string>
    <string name="upload">Upload</string>
    <string name="artistimage">artistImage</string>
    <string name="artists">Artists</string>
    <string name="add_artist">Add Artist</string>
    <string name="enter_artist_name">Enter Artist Name</string>
    <string name="admin_account">Admin Account</string>
    <string name="get_started">Get Started</string>
    <string name="explore">EXPLORE</string>
    <string name="your">YOUR</string>
    <string name="world_of">WORLD OF</string>
    <string name="music">MUSIC!</string>
    <string name="admin_login">Admin Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="trending_songs">Trending Songs</string>
    <string name="top_artist">Top Artists</string>
    <string name="favourites">Favourites</string>
    <string name="no_favourites_yet">No Favourites Yet</string>
    <string name="search_song">Search Song</string>
    <string name="songs_">Songs -</string>
    <string name="duration">Duration -</string>
    <string name="playlist">Playlists</string>
    <string name="no_playlists_found">No Playlists Found</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="enter_name">Enter Name</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="add_songs_to_continue">Add Songs to Continue</string>
    <string name="add_songs">Add Songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="search_to_continue">Search to continue</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="about">About</string>
    <string name="developed_by_mitesh_paliwal">Developed By Mitesh Paliwal</string>
    <string name="start_listening">Start Listening</string>
    <string name="recents">Recents</string>
</resources>