<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.user.CreatePlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/button_goBack"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/icon_back"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:text="@string/create_playlist"
                android:textSize="50sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_1_rounded"
            android:layout_marginTop="20dp"
            android:padding="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:fontFamily="@font/bebas_neue"
                android:textColorHint="@color/inactive_grey"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@null"
                android:id="@+id/createPlaylistName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:text="@string/songs_"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:id="@+id/createPlaylistTotalSongs"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:text="@string/duration"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:id="@+id/createPlaylistDuration"
                android:textSize="20sp"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ripple"
            android:text="@string/save"
            android:textColor="@color/pink4"
            android:fontFamily="@font/bebas_neue"
            android:textSize="25sp"
            android:id="@+id/saveButton"
            android:elevation="4dp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:textColor="?android:textColorPrimary"
            android:text="@string/songs"
            android:textSize="30sp"/>
        <Button
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ripple"
            android:text="@string/add_songs"
            android:textColor="@color/pink4"
            android:fontFamily="@font/bebas_neue"
            android:textSize="25sp"
            android:id="@+id/addSongButton"
            android:elevation="4dp"
            />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:minHeight="400dp"
            android:layout_gravity="center"
            android:background="@drawable/color_1_rounded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:fontFamily="@font/bebas_neue"
                android:textColor="@color/black"
                android:text="@string/search_to_continue"
                android:gravity="center"

                android:id="@+id/noTextView"
                android:textAlignment="center"


                android:textSize="20sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:minHeight="400dp"
                android:visibility="gone"
                android:id="@+id/addedSongsRecycler"
                />
        </LinearLayout>



    </LinearLayout>

</ScrollView>