<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/AddArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/add_artist"
            android:textColor="?android:textColorPrimary"
            android:textSize="50sp"
            android:padding="5dp"
            />
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/editText_ArtistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:textColor="?android:textColorPrimary"
            android:textSize="30sp"
            android:hint="@string/enter_artist_name"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:background="@drawable/placeholder"
                android:contentDescription="@string/selected_image" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/selectImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_ripple"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/select_image" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <ProgressBar
            android:layout_marginTop="30dp"
            android:id="@+id/addProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/addArtistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/button_ripple"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/upload" />

        <TextView
            android:id="@+id/Artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/artists"
            android:textColor="?android:textColorPrimary"
            android:textSize="50sp"
            android:padding="5dp"
            />

        <ProgressBar
            android:id="@+id/artistProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="visible"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/artistRecycler"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:nestedScrollingEnabled="true"
            android:visibility="gone"
            />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>