<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending_songs"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/bebas_neue"
            android:textSize="40sp"
            android:layout_marginTop="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trendingRecycler"
            android:orientation="horizontal"
            android:nestedScrollingEnabled="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recents"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/bebas_neue"
            android:textSize="40sp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:padding="5dp"

            android:background="@drawable/color_4_rounded"

            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:clipToPadding="false"
                android:id="@+id/recentRecycler"/>
            <TextView
                android:id="@+id/noRecentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_listening"
                android:fontFamily="@font/bebas_neue"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mainContent"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_artist"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/bebas_neue"
            android:textSize="40sp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/artistRecycler"
            android:orientation="horizontal"
            android:nestedScrollingEnabled="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourites"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/bebas_neue"
            android:textSize="40sp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:padding="5dp"

            android:background="@drawable/color_4_rounded"

            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:clipToPadding="false"
                android:id="@+id/favouriteRecycler"/>
            <TextView
                android:id="@+id/noFavText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_favourites_yet"
                android:fontFamily="@font/bebas_neue"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"
                />
        </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_marginTop="10dp"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="700dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone"
            />


    </LinearLayout>

</ScrollView>