<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".views.user.UserAccountFragment">

    <LinearLayout
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/account"
            android:textColor="?android:textColorPrimary"
            android:textSize="50sp"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="5dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_1_rounded"
            app:contentPadding="4dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/placeholder"
                    app:shapeAppearanceOverlay="@style/roundedImageViewSmall"
                    android:id="@+id/userImage"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/bebas_neue"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="35sp"/>
                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/bebas_neue"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/favouriteButton"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_1_rounded"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourites"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:textSize="25sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/settingsButton"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_1_rounded"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:textSize="25sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/themeButton"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_1_rounded"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/themes"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:textSize="25sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutButton"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_1_rounded"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:textSize="25sp"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink4"
            android:background="@drawable/button_ripple"
            android:paddingHorizontal="50dp"
            android:text="@string/logout"
            android:fontFamily="@font/bebas_neue"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_marginTop="150dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developed_by_mitesh_paliwal"
            android:fontFamily="@font/bebas_neue"
            android:textColor="?android:textColorPrimary"
            android:textSize="25sp"/>


    </LinearLayout>



</ScrollView>