<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/textAddSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/add_song"
                android:textColor="?android:textColorPrimary"
                android:textSize="50sp"
                android:layout_marginStart="10dp"
                />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/editText_SongName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:textColor="?android:textColorPrimary"
                android:textSize="40sp"
                android:hint="@string/enter_song_name"
                />

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:contentDescription="Selected Image" />

            <TextView
                android:id="@+id/songNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No song selected"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/selectImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Image" />

            <Button
                android:id="@+id/selectSongBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Song" />

            <Button
                android:id="@+id/uploadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/songs"
                android:textColor="?android:textColorPrimary"
                android:textSize="50sp"
                android:layout_marginStart="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/songRecyclerView"
                android:layout_marginTop="5dp"
                android:nestedScrollingEnabled="true"
                android:visibility="gone"

                />
            <ProgressBar
                android:layout_marginTop="10dp"
                android:id="@+id/songsProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="visible"/>
            <Button
                android:id="@+id/buttonLoadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_more"
                android:fontFamily="@font/bebas_neue"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>